Source/WebCore/html/HTMLMediaElement.cpp
@@ -1030,8 +1030,6 @@ void HTMLMediaElement::attributeChanged(const QualifiedName& name, const AtomStr
         return;
     case AttributeNames::loopAttr:
         updateSleepDisabling();
-        if (RefPtr player = m_player)
-            player->isLoopingChanged();
         return;
     case AttributeNames::preloadAttr:
         if (equalLettersIgnoringASCIICase(newValue, "none"_s))
@@ -4655,8 +4653,6 @@ void HTMLMediaElement::setLoop(bool loop)
 {
     ALWAYS_LOG(LOGIDENTIFIER, loop);
     setBooleanAttribute(loopAttr, loop);
-    if (RefPtr player = m_player)
-        player->isLoopingChanged();
 }
 
 bool HTMLMediaElement::controls() const
