Source/WebCore/platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.h
@@ -57,7 +57,7 @@ public:
     void play() override;
     void pause() override;
     void seekToTarget(const SeekTarget&) override;
-    bool doSeek(const SeekTarget&, float rate, bool isAsync = false) override;
+    bool doSeek(const SeekTarget&, float rate, GstSeekFlags, bool isAsync = false) override;
 
     void updatePipelineState(GstState);
 
